modules/gdscript/tests/scripts/analyzer/errors/nullable_index_access.gd
func test():
    var foo: Array[int]? = []
    foo[0]